force-app/main/default/objects/Debtor_Ledger__c/Debtor_Ledger__c.object-meta.xml
<CustomObject>
    <label>Debtor Summary</label>
    <nameField>
        <displayFormat>DS-{00000000}</displayFormat>
        <label>Debtor Summary No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debtors Summary</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>