force-app/main/default/objects/Debtor_Ledger__c/fields/Total_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Credit_Amount__c</fullName>
    <label>Total Credit Amount</label>
    <summarizedField>Debtor_Ledger_Line_Item__c.Credit_Amount__c</summarizedField>
    <summaryForeignKey>Debtor_Ledger_Line_Item__c.Debtor_Summary_No__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>