force-app/main/default/objects/Debtor_Ledger__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Outstanding_Amount__c</columns>
    <columns>Total_Credit_Amount__c</columns>
    <columns>Total_Debit_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>