force-app/main/default/objects/Debtor_Ledger__c/listViews/Top_Debtors.listView-meta.xml
<ListView>
    <fullName>Top_Debtors</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Account_Type__c</columns>
    <columns>Outstanding_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>Top Debtors</label>
</ListView>